--- a/pset1/pset1.ipynb
+++ b/pset1/pset1.ipynb
@@ -568,7 +568,7 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "    return torch.matmul(x, self.weight.T) + self.bias\n",
+    "return torch.matmul(x, self.weight.T) + self.bias\n",
     "```"
    ]
   },
@@ -584,10 +584,10 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "    self.weight.grad = torch.matmul(dLdout.T, self.inputs[0])\n",
-    "    self.bias.grad = dLdout.sum(0)\n",
-    "    dLdin = torch.matmul(dLdout, self.weight)  # [b,in_features]\n",
-    "    return dLdin\n",
+    "self.weight.grad = torch.matmul(dLdout.T, self.inputs[0])\n",
+    "self.bias.grad = dLdout.sum(0)\n",
+    "dLdin = torch.matmul(dLdout, self.weight)  # [b,in_features]\n",
+    "return dLdin\n",
     "```"
    ]
   },
@@ -603,8 +603,8 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "    dLdin = (self.inputs[0] > 0).float() * dLdout\n",
-    "    return dLdin"
+    "dLdin = (self.inputs[0] > 0).float() * dLdout\n",
+    "return dLdin"
    ]
   },
   {
@@ -619,11 +619,11 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "    p = logits.softmax(dim=-1)\n",
-    "    target_one_hot = torch.zeros_like(p)\n",
-    "    target_one_hot[torch.arange(logits.shape[0]), target] = 1\n",
-    "    dLdlogits = (p - target_one_hot) / logits.shape[0]\n",
-    "    return dLdlogits"
+    "p = logits.softmax(dim=-1)\n",
+    "target_one_hot = torch.zeros_like(p)\n",
+    "target_one_hot[torch.arange(logits.shape[0]), target] = 1\n",
+    "dLdlogits = (p - target_one_hot) / logits.shape[0]\n",
+    "return dLdlogits"
    ]
   },
   {
@@ -646,16 +646,23 @@
    "source": [
     "in train_epoch:\n",
     "```python\n",
-    "    for p in model.parameters():\n",
-    "        if p.grad is not None:\n",
-    "            p.data -= lr * p.grad\n",
+    "for p in model.parameters():\n",
+    "    if p.grad is not None:\n",
+    "        p.data -= lr * p.grad\n",
     "```\n",
     "in evaluate:\n",
     "```python\n",
-    "        output = model(data)\n",
-    "        pred = torch.argmax(output, dim=1)\n",
-    "        correct_predictions += (pred == target).sum().item()\n",
-    "    return correct_predictions / len(loader.dataset)"
+    "    output = model(data)\n",
+    "    pred = torch.argmax(output, dim=1)\n",
+    "    correct_predictions += (pred == target).sum().item()\n",
+    "return correct_predictions / len(loader.dataset)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 12"
    ]
   },
   {
@@ -686,6 +693,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Question 13"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**(13)** Universal Approximation"
    ]
   },
@@ -699,6 +713,13 @@
     "3.  Implementing sinusoidal positional encodings as used in SIREN models can help in learning fine-grained details and patterns in two-dimensional data spaces.\n",
     "\n",
     "Achieving perfect training accuracy is not the ultimate goal, especially as it often leads to overfitting, where the model learns the training data, including its noise and outliers, too well. This overfitting typically results in poor generalization to new, unseen data, making the model less effective in practical applications. Therefore, a balance between high training accuracy and the ability to generalize well is crucial for creating robust machine learning models."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 14"
    ]
   },
   {
@@ -758,6 +779,13 @@
     "![image-4.png](attachment:image-4.png)\n",
     "![image-5.png](attachment:image-5.png)\n",
     "![image-6.png](attachment:image-6.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 15"
    ]
   },
   {
