--- a/pset2/6_7960_Fall_2024_hw2_transfer.ipynb
+++ b/pset2/6_7960_Fall_2024_hw2_transfer.ipynb
@@ -502,7 +502,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "dl_psets",
       "language": "python",
       "name": "python3"
     },
