--- a/pset2/pset2.ipynb
+++ b/pset2/pset2.ipynb
@@ -1037,7 +1037,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No, a GNN cannot differentiate between two graphs with the same unrolled tree structures at each node, even if they contain a different number of triangles. This is because GNNs aggregate node features based on local neighborhood information, and if two nodes share identical unrolled tree structures, the GNN will compute the same feature representation for them.See below examples from lecture slides:\n",
+    "No, a GNN cannot differentiate between two graphs with the same unrolled tree structures at each node, even if they contain a different number of triangles. This is because GNNs aggregate node features based on local neighborhood information, and if two nodes share identical unrolled tree structures, the GNN will compute the same feature representation for them.See below examples from lecture slides:\\\n",
     "![image.png](attachment:image.png)\n",
     "- The two graphs have identical local structures (as seen by their unrolled tree structures), but the upper graph has 0 triangles, while the lower graph has 2 triangles.\n",
     "Because GNNs cannot differentiate between nodes with the same neighborhood structures, they will treat these two graphs as isomorphic, even though they have a different number of triangles."
