--- a/pset2/6_7960_Fall_2024_hw2_gnn.ipynb
+++ b/pset2/6_7960_Fall_2024_hw2_gnn.ipynb
@@ -2145,7 +2145,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "dl_psets",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
