--- a/pset_3/pset3.ipynb
+++ b/pset_3/pset3.ipynb
@@ -4,6 +4,223 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Problem 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Substituting $ \\mathbf{h}_1 = \\mathbf{W}_x \\mathbf{x}_1 $:\n",
+    "   $$\n",
+    "   \\mathbf{h}_2 = \\mathbf{W}_h \\mathbf{h}_1 + \\mathbf{W}_x \\mathbf{x}_2\n",
+    "   $$\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{h}_2 = \\mathbf{W}_h \\mathbf{W}_x \\mathbf{x}_1 + \\mathbf{W}_x \\mathbf{x}_2\n",
+    "   $$\n",
+    "\n",
+    "Substituting $ \\mathbf{h}_2 $:\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{y}_2 = \\phi_y(\\mathbf{W}_y \\mathbf{h}_2)\n",
+    "   $$\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{y}_2 = \\phi_y(\\mathbf{W}_y \\mathbf{W}_h \\mathbf{W}_x \\mathbf{x}_1 + \\mathbf{W}_y \\mathbf{W}_x \\mathbf{x}_2)\n",
+    "   $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Substituting $ \\mathbf{h}_2 = \\mathbf{W}_h \\mathbf{W}_x \\mathbf{x}_1 + \\mathbf{W}_x \\mathbf{x}_2 $:\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{h}_3 = \\mathbf{W}_h \\mathbf{h}_2 + \\mathbf{W}_x \\mathbf{x}_3\n",
+    "   $$\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{h}_3 = \\mathbf{W}_h (\\mathbf{W}_h \\mathbf{W}_x \\mathbf{x}_1 + \\mathbf{W}_x \\mathbf{x}_2) + \\mathbf{W}_x \\mathbf{x}_3\n",
+    "   $$\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{h}_3 = \\mathbf{W}_h^2 \\mathbf{W}_x \\mathbf{x}_1 + \\mathbf{W}_h \\mathbf{W}_x \\mathbf{x}_2 + \\mathbf{W}_x \\mathbf{x}_3\n",
+    "   $$\n",
+    "\n",
+    "substituting $ \\mathbf{h}_3 $:\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{y}_3 = \\phi_y(\\mathbf{W}_y \\mathbf{h}_3)\n",
+    "   $$\n",
+    "\n",
+    "   $$\n",
+    "   \\mathbf{y}_3 = \\phi_y(\\mathbf{W}_y \\mathbf{W}_h^2 \\mathbf{W}_x \\mathbf{x}_1 + \\mathbf{W}_y \\mathbf{W}_h \\mathbf{W}_x \\mathbf{x}_2 + \\mathbf{W}_y \\mathbf{W}_x \\mathbf{x}_3)\n",
+    "   $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (C)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " $$ \\mathbf{h}_T = \\mathbf{W}_h \\mathbf{h}_{T-1} + \\mathbf{W}_x \\mathbf{x}_T$$\n",
+    " By recursively substituting $ \\mathbf{h}_{T-1}, \\mathbf{h}_{T-2}, \\dots, \\mathbf{h}_1 $, we get:\n",
+    "\n",
+    "  $$\n",
+    "  \\mathbf{h}_T = \\mathbf{W}_h^{T-1} \\mathbf{W}_x \\mathbf{x}_1 + \\mathbf{W}_h^{T-2} \\mathbf{W}_x \\mathbf{x}_2 + \\dots + \\mathbf{W}_h \\mathbf{W}_x \\mathbf{x}_{T-1} + \\mathbf{W}_x \\mathbf{x}_T\n",
+    "  $$\n",
+    " $$\n",
+    "   \\mathbf{h}_T = \\sum_{i=1}^{T} \\mathbf{W}_h^{T-i} \\mathbf{W}_x \\mathbf{x}_i\n",
+    "   $$\n",
+    "\n",
+    "  $$\n",
+    "   \\mathbf{y}_T = \\phi_y\\left(\\mathbf{W}_y \\sum_{i=1}^{T} \\mathbf{W}_h^{T-i} \\mathbf{W}_x \\mathbf{x}_i\\right)\n",
+    "   $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (d)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In an RNN, the contribution of the first input $\\mathbf{x}_1 $ to the hidden state $ \\mathbf{h}_T $ and the output $ \\mathbf{y}_T $ is given by:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{h}_T = \\sum_{i=1}^{T} \\mathbf{W}_h^{T-i} \\mathbf{W}_x \\mathbf{x}_i\n",
+    "$$\n",
+    "\n",
+    "For the first input $ \\mathbf{x}_1 $, its contribution to $ \\mathbf{h}_T $ is:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{W}_h^{T-1} \\mathbf{W}_x \\mathbf{x}_1\n",
+    "$$\n",
+    "\n",
+    "If we decompose the matrix $ \\mathbf{W}_h $ using its eigenvalues and eigenvectors, we have:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{W}_h = \\mathbf{P} \\mathbf{\\Lambda} \\mathbf{P}^{-1}\n",
+    "$$\n",
+    "\n",
+    "where $ \\mathbf{\\Lambda} $ is the diagonal matrix containing the eigenvalues $ \\lambda_1, \\lambda_2, \\dots, \\lambda_n $ of $ \\mathbf{W}_h $. Hence, the expression for $ \\mathbf{W}_h^{T-1} $ becomes:\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{W}_h^{T-1} = \\mathbf{P} \\mathbf{\\Lambda}^{T-1} \\mathbf{P}^{-1}\n",
+    "$$\n",
+    "\n",
+    "In $ \\mathbf{\\Lambda}^{T-1} $, the eigenvalues are raised to the power of $ T-1 $, i.e.,\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{\\Lambda}^{T-1} = \\text{diag}(\\lambda_1^{T-1}, \\lambda_2^{T-1}, \\dots, \\lambda_n^{T-1})\n",
+    "$$\n",
+    "\n",
+    "If the eigenvalues $ \\lambda_i $ of $ \\mathbf{W}_h$ are less than 1 (which is often the case for neural network parameters), then as $ T $ increases, $ \\lambda_i^{T-1} $ tends to 0. Thus, the contribution of the first input $ \\mathbf{x}_1 $ to $ \\mathbf{h}_T $ and $ \\mathbf{y}_T $ diminishes exponentially with $ T $."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**RNN**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$$ \\mathbf{h}_T = \\mathbf{W}_h \\mathbf{h}_{T-1} + \\mathbf{W}_x \\mathbf{x}_T$$\n",
+    "\n",
+    "At each timestep, the computation only involves $\\mathbf{h}_{T-1}$  and $\\mathbf{x}_T$, takes $O(1)$\n",
+    "\n",
+    "There are $T$ steps in total, so the computation cost is linear to $T$ : $O(T)$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Self-attention Layer**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pair-wise inner product takes the dot product between query and key -- \n",
+    "$\n",
+    "O(T^2 d)\n",
+    "$\n",
+    "\n",
+    "Softmax over the square matrix -- $O(T^2)$\n",
+    "\n",
+    "Matrix Multiplication of $\\mathbf{A}$ and $\\mathbf{V}$  -- $O(T^2)$\n",
+    "\n",
+    "The total cost is $O(T^2)$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**RNN VS Transformer**\n",
+    "\n",
+    "With sufficient parallel hardware, a forward pass on a transformer will generally be faster than on an RNN.  Although transformers have a higher memory and time complexity than RNN, but transformers can be fully parallelized across all tokens, order information is maintained by positional encoding while RNNs must process sequentially, waiting for each hidden state to be calculated before moving to the next. This makes transformers more efficient on parallel hardware."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If memory constraints are manageable, I would choose a transformer, as RNNs suffer from vanishing gradient problems and cannot be parallelized effectively. Transformers handle long-range dependencies better and can fully utilize parallel hardware for long sequences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Problem 2"
    ]
   },
@@ -95,7 +312,72 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## (e)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Because autoregressive generation is sequential, predicting one token at a time where each step depends on the previous one, making it hard to parallelize. In contrast, training processes all tokens in parallel, allowing for faster computation by fully utilizing the GPU."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the early epochs, the generated text tends to be repetitive, with outputs like \"I, I, I, I\" due to the model's initial reliance on simple patterns. As training progresses, the model learns better language structure, reducing repetition and producing more meaningful, contextually relevant sentences."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (g)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```<START> KING RICHARD III : Why , I have a man ? I have not a word ? what is a man ? I will I am a man ? I am I will be a man . I am a man ? What , I will not be a man```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (h)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Greedy decoding always selects the token with the highest probability at each step, which can lead to degenerate sequences, particularly when the highest-probability tokens are repeated frequently.Nucleus sampling select tokens from a dynamically sized subset whose cumulative probability exceeds a threshold. This allows the model to consider more diverse but still likely tokens, breaking the repetitive patterns. The trade-off is that it introduces some randomness which may result in lower-quality outputs. Besides it can be slower compared to greedy decoding."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KV caching technique speeds up generation by storing previously computed key-value pairs, so the model doesn’t have to recompute attention for all tokens each time a new token is generated. Instead, it only computes attention for the new token, reducing the computational complexity from quadratic to linear as sequences grow."
+   ]
   }
  ],
  "metadata": {
